--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="main.css"/>
+    <script language="javascript" src="js/bootstrap.min.js"></script>
+    
 </head>
 <body>
 
@@ -15,6 +20,15 @@
     {{{body}}}
      
     <footer>
+        <div class="row">
+            <div class="col-6 hola">
+                hola 3
+            </div>
+            <div class="col-6">
+                hola 2
+
+            </div>
+        </div>
         Footer que está siempre
     </footer>
 
