header maquetado-falta search icon

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,171 @@
 .hola{
     background-color: red;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700,900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+}
+.mainheader__menu{
+    cursor: pointer;
+}
+.mainheader__menu svg path{
+    fill: white;
+}
+.cart_icon{
+    cursor: pointer;
+}
+.cart_icon svg path{
+    fill: white;
+}
+.mainheader {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 55px;
+    background: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid white;
+    
+    box-sizing: border-box;
+    z-index: 10;
+    
+    justify-content: space-between;
+    padding: 10px 30px"
+}
+
+.mainheader{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 190%;
+    
+    text-align: center;
+
+    color: #FFFFFF;
+}
+
+
+.mainheader__mainnav ul{
+    display: flex;
+    flex-direction: row;
+}
+
+
+.mainheader__mainnav a {
+
+    color: inherit;
+    text-align: inherit;
+
+    font-weight: inherit;
+    font-style: inherit;
+    font-family: inherit;
+    padding: 20px;
+    text-decoration: none;
+
+    cursor: pointer;
+    justify-content: space-between;
+}
+
+@media (max-width: 550px){
+    .mainheader__mainnav{
+        position: absolute;
+        width: 100%;
+        top: 50px;
+        left: 0px;
+        opacity: 0;
+        display: flex;
+        flex-direction: column;
+        pointer-events: none;
+        transform: translate(-100%, 0%)
+    }
+}
+
+.hamburguer_menu {
+    background: black;
+    width: 280px;
+    text-align: left;
+    padding: 20px;
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    z-index: 20;
+}
+.hamburguer_menu p{
+    color: white;
+    
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 14px;
+    
+    color: #FFFFFF;
+}
+.hamburguer_menu p b{
+    font-size: 12px;
+    
+}
+.hamburguer_menu p b span{
+    text-decoration: underline;
+}
+.hamburguer_menu .hamburguer_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: white 1px solid;
+    padding: 20px 0;
+}
+.hamburguer_menu .hamburguer_container h1 {
+    font-family: 'Alegreya Sans';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 190%;
+    /* identical to box height, or 38px */
+    
+    text-align: center;
+    
+    color: #FFFFFF;
+    
+}
+.hamburguer_menu .hamburguer_container .close_icon svg path{
+    fill: white;
+}
+.hamburguer_menu .hamburguer_container nav{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 190%;
+    
+    text-align: center;
+    
+    color: #FFFFFF;
+}
+.hamburguer_menu .hamburguer_container nav ul li{
+    list-style: none;
+    text-align: left;
+}
+.hamburguer_menu .hamburguer_container nav ul li a{
+    color: inherit;
+    font-size: 14px;
+}
+.social_media {
+    display: flex;
+    flex-direction: row;
+    
+}
+.social_media li a{
+    width: 25px;
+    height: 25px;
+    background: white;
+}
