--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,99 @@
     
 </head>
 <body>
+<header>
+        <div class="mainheader" >
+            
+            <div class="mainheader__menu">
+            <!-- Un amigo me dijo que era posible
+            usar los elementos svg direnctamente en el html -->
+                <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M1.5684 9.98321C0.67217 9.98321 0 9.45682 0 8.75496C0 8.0531 0.67217 7.49161 1.5684 7.49161H17.3868C18.283 7.49161 19 8.0531 19 8.75496C19 9.45682 18.283 9.98321 17.3868 9.98321H1.5684Z" />
+                    <path
+                        d="M17.3868 0C18.283 0 19 0.561488 19 1.26335C19 1.96521 18.283 2.49161 17.3868 2.49161H1.5684C0.67217 2.49161 0 1.96521 0 1.26335C0 0.561488 0.67217 0 1.5684 0H17.3868Z" />
+                    <path
+                        d="M17.3868 14.9832C18.283 14.9832 19 15.5096 19 16.2115C19 16.9133 18.283 17.4748 17.3868 17.4748H1.5684C0.67217 17.4748 0 16.9133 0 16.2115C0 15.5096 0.67217 14.9832 1.5684 14.9832H17.3868Z" />
+                </svg>
+            </div>
 
+            <nav class="mainheader__pagename">
+                <h1>Jerebu</h1>
+            </nav>
+
+
+            <nav class="mainheader__mainnav">
+                <ul>
+                    <li><a href="">Stickers</a></li>
+                    <li><a href="">Comics</a></li>
+                    <li><a href="">Posters</a></li>
+                    <li><a href="">Commissions</a></li>
+                    <a href="">Stickers</a>
+                    <a href="">Comics</a>
+                    <a href="">Posters</a>
+                    <a href="">Commissions</a>
+                </ul>
+            </nav>
+
+
+            <div class="search_icon">
+                <svg width="21" height="22" viewBox="0 0 28 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M27.5743 26.4144L20.6718 19.2359C22.4465 17.1263 23.4189 14.472 23.4189 11.7087C23.4189 5.25264 18.166 0 11.7095 0C5.25297 0 0 5.25264 0 11.7087C0 18.1648 5.25297 23.4175 11.7095 23.4175C14.1333 23.4175 16.4432 22.6864 18.418 21.2987L25.3729 28.5317C25.6636 28.8335 26.0546 29 26.4736 29C26.8702 29 27.2464 28.8488 27.532 28.5739C28.1389 27.99 28.1582 27.0217 27.5743 26.4144ZM11.7095 3.05445C16.4818 3.05445 20.3643 6.93666 20.3643 11.7087C20.3643 16.4808 16.4818 20.363 11.7095 20.363C6.9371 20.363 3.05464 16.4808 3.05464 11.7087C3.05464 6.93666 6.9371 3.05445 11.7095 3.05445Z" />
+                </svg>
+            </div>
+        </div>
+       
+        <div class="secondnav">
+        </div>
+        
+    </header>
+    <div class="hamburguer_menu" style="display: none">
+        <div class="hamburguer_container" style="padding: 0 0px 20px;">
+            <h1>Jerebu</h1>
+            <div class="close_icon">
+                <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M7.64971 6.50014L12.7618 1.38783C13.0794 1.07048 13.0794 0.555567 12.7618 0.238216C12.4442 -0.0794054 11.9298 -0.0794054 11.6122 0.238216L6.50014 5.35052L1.38778 0.238216C1.07017 -0.0794054 0.555815 -0.0794054 0.238206 0.238216C-0.0794022 0.555567 -0.0794022 1.07048 0.238206 1.38783L5.35057 6.50014L0.238206 11.6124C-0.0794022 11.9298 -0.0794022 12.4447 0.238206 12.7621C0.397011 12.9206 0.605137 13 0.812991 13C1.02085 13 1.22897 12.9206 1.38778 12.7618L6.50014 7.64948L11.6122 12.7618C11.771 12.9206 11.9792 13 12.187 13C12.3949 13 12.603 12.9206 12.7618 12.7618C13.0794 12.4444 13.0794 11.9295 12.7618 11.6122L7.64971 6.50014Z"
+                        fill="white" />
+                </svg>
+            </div>
+        </div>
+        <div class="hamburguer_container">
+            <nav>
+                <ul>
+                    <li><a href="">Stickers</a></li>
+                    <li><a href="">Comics</a></li>
+                    <li><a href="">Posters</a></li>
+                    <li><a href="">Commissions</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="hamburguer_container">
+            <p><b>If you prefer, call us at <span>855 336 2909</span></b> <br>Monday through Friday from 10:00 am to
+                7:00 pm</p>
+        </div>
+        <div class="hamburguer_container">
+            <nav>
+                <ul>
+                    <li><a href="">Gift Card</a></li>
+                    <li><a href="">Shopguide</a></li>
+                    <li><a href="">About Jerebu</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="hamburguer_container" style="border-bottom: none">
+            <p>Follow us on</p>
+            <div class="social_media">
+                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+            </div>
+        </div>
+    </div>
     <nav>
         Navegación que está siempre
     </nav>
