--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,13 +11,14 @@
     <script language="javascript" src="js/bootstrap.min.js"></script>
     
 </head>
+
+
 <body>
-<header>
+
+    <header>
         <div class="mainheader" >
             
             <div class="mainheader__menu">
-            <!-- Un amigo me dijo que era posible
-            usar los elementos svg direnctamente en el html -->
                 <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M1.5684 9.98321C0.67217 9.98321 0 9.45682 0 8.75496C0 8.0531 0.67217 7.49161 1.5684 7.49161H17.3868C18.283 7.49161 19 8.0531 19 8.75496C19 9.45682 18.283 9.98321 17.3868 9.98321H1.5684Z" />
@@ -47,10 +48,11 @@
             </nav>
 
 
-            <div class="search_icon">
+            <div class="cart_icon">
                 <svg width="21" height="22" viewBox="0 0 28 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M27.5743 26.4144L20.6718 19.2359C22.4465 17.1263 23.4189 14.472 23.4189 11.7087C23.4189 5.25264 18.166 0 11.7095 0C5.25297 0 0 5.25264 0 11.7087C0 18.1648 5.25297 23.4175 11.7095 23.4175C14.1333 23.4175 16.4432 22.6864 18.418 21.2987L25.3729 28.5317C25.6636 28.8335 26.0546 29 26.4736 29C26.8702 29 27.2464 28.8488 27.532 28.5739C28.1389 27.99 28.1582 27.0217 27.5743 26.4144ZM11.7095 3.05445C16.4818 3.05445 20.3643 6.93666 20.3643 11.7087C20.3643 16.4808 16.4818 20.363 11.7095 20.363C6.9371 20.363 3.05464 16.4808 3.05464 11.7087C3.05464 6.93666 6.9371 3.05445 11.7095 3.05445Z" />
+
                 </svg>
             </div>
         </div>
@@ -104,24 +106,19 @@
                 <li><a href=""><img src="" alt=""></a></li>
             </div>
         </div>
-    </div>
-    <nav>
         Navegación que está siempre
-    </nav>
+    </div>
+
     
     {{{body}}}
      
-    <footer>
-        <div class="row">
-            <div class="col-6 hola">
-                hola 3
-            </div>
-            <div class="col-6">
-                hola 2
-
-            </div>
-        </div>
-        Footer que está siempre
+   <footer>
+        <p><strong>If you prefer, call us at 855 336 2909 </strong>Monday through Friday from 10:00 am to 7:00 pm </p>
+        <img src="" alt="Payment Icons">
+        <p>Secure online payment</p>
+        <p>Follow us on</p>
+        <img src="" alt="Social Media Icons">
+        <p>© 2019 Jerebu</p>
     </footer>
 
 </body>
